--- a/index.html
+++ b/index.html
@@ -1,101 +1,100 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sumank Bike Website</title>
-    <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Webby | Professional Websites</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
+<!-- HEADER -->
 <header>
+    <div class="logo">Webby</div>
     <nav>
-        <a href="#home" class="active">Home</a>
-        <a href="#about">About</a>
-        <a href="#bikes">Our Bikes</a>
+        <a href="#home">Home</a>
+        <a href="#services">Services</a>
+        <a href="#portfolio">Portfolio</a>
         <a href="#contact">Contact</a>
-        <button onclick="toggleDarkMode()">Dark Mode</button>
     </nav>
 </header>
 
-<section id="home" class="hero">
-    <div class="hero-text">
-        <h1>Ride Fast, Ride Safe 🚀</h1>
-        <p>Explore our latest bikes and models!</p>
-        <button onclick="document.getElementById('bikes').scrollIntoView({behavior: 'smooth'})">Explore Bikes</button>
-    </div>
+<!-- HERO -->
+<section class="hero" id="home">
+    <h1>I Build Professional Websites for Businesses Worldwide</h1>
+    <p>Modern, responsive, and mobile-friendly designs to grow your online presence.</p>
+    <a href="#contact" class="btn">Hire Me</a>
 </section>
 
-<section id="about">
-    <h1>About Me</h1>
-    <p>Hi, my name is <b>Sumank</b>. This is a simple website created by me to learn HTML and CSS.</p>
-</section>
-
-<section id="bikes">
-    <h1>Our Bikes</h1>
-    <div class="bike-cards">
+<!-- SERVICES -->
+<section class="services" id="services">
+    <h2>Services & Pricing</h2>
+    <div class="service-box">
         <div class="card">
-            <img src="bike1.jpg" alt="Bike Model 1">
-            <h2>Bike Model 1</h2>
-            <p>Price: ₹1,50,000</p>
-            <button>Buy Now</button>
+            <h3>Business Website</h3>
+            <p>Responsive websites for shops, startups & local businesses.</p>
+            <p><b>Price: $100</b></p>
         </div>
         <div class="card">
-            <img src="bike2.jpg" alt="Bike Model 2">
-            <h2>Bike Model 2</h2>
-            <p>Price: ₹1,80,000</p>
-            <button>Buy Now</button>
+            <h3>Landing Page</h3>
+            <p>One-page websites to sell products or services online.</p>
+            <p><b>Price: $50</b></p>
+        </div>
+        <div class="card">
+            <h3>Portfolio Website</h3>
+            <p>Showcase your work and attract clients globally.</p>
+            <p><b>Price: $80</b></p>
         </div>
     </div>
 </section>
 
-<section id="contact">
-    <h1>Contact</h1>
-    <form onsubmit="showMessage(); return false;">
-        <input type="text" placeholder="Your Name" required>
-        <input type="email" placeholder="Your Email" required>
-        <textarea rows="5" placeholder="Your Message" required></textarea>
-        <button type="submit">Send Message</button>
-    </form>
-    <p id="successMessage">Thank you! Your message has been sent 😊</p>
+<!-- PORTFOLIO -->
+<section class="portfolio" id="portfolio">
+    <h2>My Projects</h2>
+    <div class="project-box">
+<section id="portfolio">
+    <h2>My Projects</h2>
+    <div class="project-box">
+
+        <!-- Project 1 -->
+        <div class="project-card">
+            <img src="project1.png" alt="Business Website">
+            <h4>Business Website</h4>
+            <p>Responsive website for a local cafe in USA. Mobile-friendly & modern design.</p>
+            <a href="#" class="btn">Live Demo</a>
+        </div>
+
+        <!-- Project 2 -->
+        <div class="project-card">
+            <img src="project2.png" alt="Landing Page">
+            <h4>Landing Page</h4>
+            <p>One-page website to sell services for a fitness center. Clean & fast.</p>
+            <a href="#" class="btn">Live Demo</a>
+        </div>
+
+        <!-- Project 3 -->
+        <div class="project-card">
+            <img src="project3.png" alt="Portfolio Website">
+            <h4>Portfolio Website</h4>
+            <p>Professional portfolio website for a designer. Showcasing work beautifully.</p>
+            <a href="#" class="btn">Live Demo</a>
+        </div>
+
+    </div>
+</section>
+<!-- CONTACT -->
+<section class="contact" id="contact">
+    <h2>Contact Me</h2>
+    <p>Email: <a href="mailto:rajsumank76@gmail.com">rajsumank76@gmail.com</a></p>
+    <p>WhatsApp / Phone: 8084221324</p>
+    <a href="mailto:rajsumank76@gmail.com" class="btn">Send Message</a>
 </section>
 
+<!-- FOOTER -->
 <footer>
-    © 2025 Sumank | Learning Web Development
+    © 2025 Webby | Professional Website Design
 </footer>
 
-<script>
-    function showMessage() {
-        const msg = document.getElementById('successMessage');
-        msg.style.display = 'block';
-        document.querySelector('form').reset();
-        setTimeout(() => { msg.style.display = 'none'; }, 3000);
-    }
-
-    function toggleDarkMode() {
-        document.body.classList.toggle('dark-mode');
-    }
-
-    const sections = document.querySelectorAll('section');
-    const navLinks = document.querySelectorAll('nav a');
-
-    window.addEventListener('scroll', () => {
-        let current = '';
-        sections.forEach(section => {
-            const sectionTop = section.offsetTop - 70;
-            if (pageYOffset >= sectionTop) {
-                current = section.getAttribute('id');
-            }
-        });
-
-        navLinks.forEach(link => {
-            link.classList.remove('active');
-            if (link.getAttribute('href') === '#' + current) {
-                link.classList.add('active');
-            }
-        });
-    });
-</script>
-
+<script src="script.js"></script>
 </body>
 </html>
